--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.iml
 .DS_STORE
 confessions.txt
-
+keys.js
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 # Useful .gitignore templates: https://github.com/github/gitignore
